force-app/main/default/objects/Fee_Line_Item_Template__c/Fee_Line_Item_Template__c.object-meta.xml
<CustomObject>
    <label>Fee Line Item Template</label>
    <nameField>
        <label>Fee Line Item Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fee Line Item Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>