force-app/main/default/objects/Fee_Line_Item_Template__c/fields/Application_Template__c.field-meta.xml
<CustomField>
    <fullName>Application_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Template</label>
    <referenceTo>Application_Template__c</referenceTo>
    <relationshipLabel>Fee Line Item Templates</relationshipLabel>
    <relationshipName>ApplicationTemplate_FeeLineItemTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>