force-app/main/default/objects/Fee_Line_Item_Template__c/fields/GL_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Code__c</fullName>
    <label>GL Code</label>
    <type>TextArea</type>
</CustomField>