force-app/main/default/objects/Fee_Line_Item_Template__c/fields/HST__c.field-meta.xml
<CustomField>
    <fullName>HST__c</fullName>
    <label>Total (With HST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>