force-app/main/default/objects/Fee_Line_Item_Template__c/fields/Invoice_Code__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Code__c</fullName>
    <label>Invoice Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>