force-app/main/default/objects/Fee_Line_Item_Template__c/fields/Renewal_Templates__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Templates__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewal Templates</label>
    <referenceTo>Renewal_Template__c</referenceTo>
    <relationshipLabel>Fee Line Item Templates</relationshipLabel>
    <relationshipName>RenewalTemplate_Fee_Line_Item_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>