force-app/main/default/objects/Fee_Line_Item_Template__c/listViews/All_Fee_Line_Items.listView-meta.xml
<ListView>
    <fullName>All_Fee_Line_Items</fullName>
    <columns>NAME</columns>
    <columns>GL_Code__c</columns>
    <columns>Class__c</columns>
    <columns>Invoice_Code__c</columns>
    <columns>Type__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Amount__c</columns>
    <columns>HST__c</columns>
    <columns>Application_Template__c</columns>
    <columns>Renewal_Templates__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fee Line Items</label>
</ListView>